--- a/css/sass/structure/content/_content.scss
+++ b/css/sass/structure/content/_content.scss
@@ -22,7 +22,11 @@
 // News Items
 @import "news-items";
 
+// Errorpages
+@import "errors";
 
+// Errorpages
+@import "search";
 
 // Accordion
 @import "accordion";
