--- a/css/sass/structure/_layout.scss
+++ b/css/sass/structure/_layout.scss
@@ -58,8 +58,25 @@ html, body, button {
     @extend .col-sm-8;
 
 }
+#hero {
+    .search-title {
+	@extend .col-sm-3;
+    }
+    .search-input {
+	@extend .col-sm-9;
+    }
+}
 
-
+.error-notice {
+    @extend .col-sm-3;
+    @extend .col-sm-offset-1;
+}
+.error-image {
+    @extend .col-sm-3;
+}
+.error-search {
+    @extend .col-sm-5;
+}
 
 
 [class*="span"] {
