--- a/css/sass/structure/content/_search.scss
+++ b/css/sass/structure/content/_search.scss
@@ -2,38 +2,9 @@
 /* Search page
 /*-----------------------------------------------------------------------------------*/
 
-/* Search Forms in Content */
-.searchform-content {
-	border: none;
-	padding-top: 40px;
-	@include placeholder($colorSearchPlaceholder);
-
-	h3 {
-		font-weight: normal;
-	}
-
-	input[type="text"] {
-		@include border-radius(20px);
-		padding: 10px 10px 10px 40px;
-		width: 200px;
-		font-size: 15px;
-		line-height: 15px;
-		float: left;
-		margin-right: 10px;
-		background: $colorSearchInputBackground url('../img/icon-search.png') no-repeat 15px center;
-		border: none;
-		outline: none;
-		color: $colorSearchInput;
-		
-	
-
-		&:focus {
-			background-color: $colorSearchInputBackgroundFocus;
-		}
-	}
-}
 
 
+// Suchergebnisse
 
 .search-result {
 	margin-bottom: 11px;
