--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -175,7 +175,7 @@ $font-size-base:	    16;
 $font-size-meta:	    13;
 $font-size-breadcrumb:	    13;
 $font-size-herosearch:	    16;
-
+$font-size-header-branding:   19;
 
 
 
