--- a/css/sass/structure/_structure.scss
+++ b/css/sass/structure/_structure.scss
@@ -2,6 +2,9 @@
 /* Structural 
 /*-----------------------------------------------------------------------------------*/
 
+// Add grid extention
+@import "grid-extention";
+
 
 // Layout - Rahmen, grundlegende Struktur gesamte Website
 @import "layout";
