--- a/css/sass/plugins/_plugin-flexslider.scss
+++ b/css/sass/plugins/_plugin-flexslider.scss
@@ -1,9 +1,6 @@
 .flex-direction-nav {
 	@include no-list;
-	position: absolute;
 	z-index: 20;
-	bottom: 62px;
-	right: 30px; *bottom: 30px;
 	
 	li {
 		@include no-list;
@@ -16,13 +13,15 @@
 }
 
 .flex-pauseplay {
-	position: absolute;
 	z-index: 21;
-	bottom: 62px;
-	right: 30px;
 }
 
-.flex-direction-nav, .flex-pauseplay {
+.flex-direction-nav, 
+.flex-pauseplay {
+    position: absolute;
+    bottom: 62px;
+    right: 70px; 
+    
 	a {
 		display: block;
 		background-color: #fff;
