--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -36,8 +36,8 @@ $screen-xl-min:  $screen-xl;
 $screen-xl-max:	 ($screen-xxl - 1);   
 $screen-xxl-min:    $screen-xxl;
 
-
-$container-xl:	    1200px;
+$container-lg:	    970px;
+$container-xl:	    1100px;
 $container-xxl:	    1400px;	 
 
 
